gap fixed

--- a/css/custom.css
+++ b/css/custom.css
@@ -917,7 +917,7 @@ header.main-header .header-sticky.active{
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
-	gap: 30px;
+	gap: 0px;
 }
 
 .hero-image{
